--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@capacitor/android": "^4.6.3",
+    "@capacitor/angular": "^2.0.3",
+    "@capacitor/core": "latest",
+    "angular-in-memory-web-api": "^0.15.0",
+    "capacitor-moengage-core": "^2.1.0",
+    "my-plugin": "file:my-plugin",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -26,6 +32,7 @@
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
+    "@capacitor/cli": "latest",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
