--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,14 +6,17 @@
   <application
     android:name="com.example.app.SampleApplication"
     android:allowBackup="true"
+    android:dataExtractionRules="@xml/new_backup_descriptor_config"
+    android:fullBackupContent="@xml/old_backup_descriptor_config"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
 
+
     <activity
-      android:name="com.example.app.MainActivity"
+      android:name=".MainActivity"
       android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
       android:exported="true"
       android:label="@string/title_activity_main"
@@ -42,7 +45,7 @@
       android:grantUriPermissions="true">
       <meta-data
         android:name="android.support.FILE_PROVIDER_PATHS"
-        android:resource="@xml/file_paths"></meta-data>
+        android:resource="@xml/file_paths" />
     </provider>
 
   </application>
