--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:7.2.1'
     classpath 'com.google.gms:google-services:4.3.13'
     classpath 'com.google.gms:google-services:4.3.15'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.22"
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
