--- a/my-plugin/android/src/main/AndroidManifest.xml
+++ b/my-plugin/android/src/main/AndroidManifest.xml
@@ -1,3 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.plugin">
-</manifest>
+<manifest package="com.example.plugin" />
