--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@capacitor/android": "^4.6.3",
     "@capacitor/angular": "^2.0.3",
     "@capacitor/core": "latest",
+    "@ionic/angular": "^6.5.4",
     "angular-in-memory-web-api": "^0.15.0",
     "capacitor-moengage-core": "^2.1.0",
+    "ionic": "^5.4.16",
     "my-plugin": "file:my-plugin",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
