--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
   androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
   androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
   implementation("com.moengage:moe-android-sdk:12.6.01")
+  implementation("com.moengage:inapp:6.5.0")
   implementation("com.google.firebase:firebase-messaging:23.1.1")
   implementation platform('com.google.firebase:firebase-bom:31.2.2')
   implementation 'com.google.firebase:firebase-analytics'
