--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@capacitor/angular": "^2.0.3",
     "@capacitor/core": "latest",
     "@ionic/angular": "^6.5.4",
+    "activity-plugin": "file:activity-plugin",
     "angular-in-memory-web-api": "^0.15.0",
     "capacitor-moengage-core": "^2.1.0",
-    "ionic": "^5.4.16",
-    "my-plugin": "file:my-plugin",
+    "echo-plugin": "file:echo-plugin",
+    "ionic": "^4.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -34,7 +35,7 @@
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
-    "@capacitor/cli": "latest",
+    "@capacitor/cli": "^4.6.3",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
